adds support for basicAuth when deleting a DIP in an external service

--- a/roda-core/roda-core/src/main/resources/config/roda-core.properties
+++ b/roda-core/roda-core/src/main/resources/config/roda-core.properties
@@ -262,3 +262,10 @@ core.tools.avconvconvert.versionCommand = /usr/bin/avconv -version
 dip.dbptk.openExternalURL: http://{{openHostname}}:{{openPort}}/index.html#database/{{database}}
 dip.dbptk.deleteExternalURL: http://{{deleteHostname}}:{{deletePort}}/api/v1/manage/database/{{database}}
 dip.dbptk.deleteExternalURL.method: DELETE
+
+##############################################
+# DIP Delete Credentials properties
+##############################################
+
+dip.dbptk.credentials.username: admin
+dip.dbptk.credentials.password: roda
